# SHARP

./: eval_test_ms_sft.jsonl  pyproject.toml
pluckability/: analyze.py  form_dataset_sft.py  generate_completions.py  run.sh  train_hf.sh  train_hf_sft.py  train_ms_sft.sh  train_openai.sh  train_openai_sft.py  viz_heatmap.py
pluckability/instructions/: multi_shot.txt  sft_instruction.txt  sft_instruction_slim.txt  zero_shot.txt
pluckability/src/: _format.py  _helpers.py  _types.py
